<package>
  <name>openrobot_follow</name>
  <version>0.4.0</version>

  <description>openrobot_follow Package</description>

  <maintainer email="2382766916@qq.com">pos</maintainer>
  <license>BSD</license>
 
  <author email="2382766916@qq.com">pos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
